<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginBottom="24dp"
            android:text="@string/privacy_option"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
            android:id="@+id/userid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Your userId is -" />

    <ImageButton
            android:id="@+id/userid_refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="refreshUserIdString"
            app:srcCompat="@android:drawable/stat_notify_sync" />

    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="54dp"
            android:layout_marginBottom="120dp"
            android:columnCount="2"
            android:rowCount="3">

        <Button
                android:id="@+id/optin_button"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:onClick="optIn"
                android:text="@string/opt_in_label" />

        <Button
                android:id="@+id/optout_button"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:onClick="optOut"
                android:text="@string/opt_out_label" />

        <Button
                android:id="@+id/forgetme_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:onClick="forgetMe"
                android:text="@string/forget_me_label" />

        <Button
                android:id="@+id/stop_tracking_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:onClick="stopTracking"
                android:text="@string/stop_tracking_label" />

        <Button
                android:id="@+id/resume_tracking_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:onClick="resumeTracking"
                android:text="@string/resume_tracking_label" />
    </GridLayout>

</LinearLayout>
