<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".thirdparty.LaunchDarklyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_third_party"
            style="@style/TitleText"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/label_launch_darkly"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_setup_launch_darkly"
            style="@style/ListText"
            android:layout_width="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/label_setup_launch_darkly"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_third_party" />

        <Button
            android:id="@+id/initialise_client"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:onClick="onStartLaunchDarklyClient"
            android:text="@string/label_launch_darkly_init_client"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_third_party" />

        <EditText
            android:id="@+id/feature_flag_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/label_launch_darkly_ff_hint"
            android:visibility="gone"
            android:text="mobile-test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_third_party" />

        <Button
            android:id="@+id/retrieve_and_listen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:onClick="onRetrieveAndListen"
            android:text="@string/label_launch_darkly_retrieve_and_listen"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feature_flag_name" />

        <TextView
            android:id="@+id/feature_flag_state"
            style="@style/ListText"
            android:layout_width="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retrieve_and_listen" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
