<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <TextView
                    android:id="@+id/Title"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingStart="8dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="16dp"
                    android:text="@string/main_screen_title1"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/label_activity"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="8dp"
                    android:onClick="openActivity"
                    android:padding="12dp"
                    android:text="@string/label_activity"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/label_fragment"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="8dp"
                    android:onClick="openFragment"
                    android:padding="12dp"
                    android:text="@string/label_fragment"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/label_popup"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginStart="8dp"
                    android:onClick="openPopUp"
                    android:padding="12dp"
                    android:text="@string/label_popup"
                    android:textSize="16sp"
                    android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>